# pyvisca-gui

./: .gitignore  README.md  pyproject.toml  requirements.txt
pyvisca_gui/: main.py
